Remove favicon, fix global font sizing, fix back to home link spacing on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,6 @@ body {
   /* background-color: black; */
   /* color: white; */
   line-height: 1.4;
-  font-size: 18px;
 }
 
 * {
