--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -16,13 +16,13 @@
 .heading {
 	/* font-family: DM Sans; */
 	font-weight: 700;
-	font-size: 2.5rem;
+	font-size: 2.75rem;
 	margin-top: 0;
 	margin-bottom: 0;
 }
 
 .subheading {
-	font-size: 1.1rem;
+	font-size: 1.2rem;
 	margin-bottom: 2rem;
 }
 
@@ -81,6 +81,7 @@
 
 	.headingContainer {
 		width: 100%;
+		padding: 0;
 	}
 
 	.profileImg {
