--- a/styles/layout.module.css
+++ b/styles/layout.module.css
@@ -1,6 +1,5 @@
 .container {
-	max-width: 55rem;
-	padding: 0 1rem;
+	max-width: 60rem;
 	padding-bottom: 100px;
 	margin: 3rem auto 6rem;
 }
@@ -27,10 +26,18 @@
 }
 
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 70.6rem) {
 	.container {
-		width: 85%;
-		padding: 0;
+		max-width: 85%;
+		padding-left: 0;
+		padding-right: 0;
+		padding-bottom: 0;
+	}
+
+}
+
+@media screen and (max-width: 800px) {
+	.padTop {
 		padding-top: 50px;
 	}
 }
