--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -9,12 +9,12 @@
 	justify-content: space-between;
 	/* font-family: DM Sans; */
 	font-weight: 700;
-	font-size: 2.5rem;
+	font-size: 2.75rem;
 	margin-bottom: 0;
 }
 
 .subheader {
-	font-size: 1.1rem;
+	font-size: 1.2rem;
 }
 
 
