--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -16,8 +16,7 @@
 
 .title {
 	margin: 0;
-	/* font-family: DM Sans; */
-	font-size: 1.75rem;
+	font-size: 2rem;
 	font-weight: 700;
 }
 
@@ -25,17 +24,15 @@
 	display: inline-block;
 	margin: 0;
 	margin-top: 5px;
-	/* font-family: DM Mono; */
-	/* color: var(--accent-color); */
 	color: gray;
-	/* font-size: 1rem; */
+	font-size: 1.2rem;
 	font-weight: normal;
 }
 	
 .description {
 	margin: 0;
 	margin-top: 10px;
-	font-size: 1.1rem;
+	font-size: 1.2em;
 	line-height: 1.5;
 }
 
@@ -47,7 +44,7 @@
 }
 
 .icon {
-	font-size: 1.75rem;
+	font-size: 2rem;
 }
 
 @media screen and (max-width: 800px) {
