--- a/styles/videos.module.css
+++ b/styles/videos.module.css
@@ -32,12 +32,12 @@
 	margin-bottom: 0;
 	/* font-family: DM Sans; */
 	font-weight: 700;
-	font-size: 1.75rem;
+	font-size: 2rem;
 }
 
 .description {
 	margin-top: 0.5rem;
-	font-size: 1.1rem;
+	font-size: 1.2rem;
 }
 
 
